
<resources>
    <string name="app_name">Batalla Naval</string>
    <string name="placeholder_inicio">Ingresá tu nombre</string>
    <string name="nombre_obligatorio">Por favor, ingresá tu nombre</string>
    <string name="titulo_spinner">¡Elegí el tamaño de tu tablero!</string>
    <string-array name="opciones_tablero">
        <item>6x6</item>
        <item>8x8</item>
        <item>10x10</item>
    </string-array>
    <string name="btn_ingresarJuego">INGRESAR</string>
    <string name="btn_ranking">VER RANKING</string>
    <string name="enlace_ayuda">Ayuda</string>

    <string name="estadisticas_texto">Movimientos: %1$d | Aciertos: %2$d | Restantes: %3$d</string>
    <string name="mensaje_final">¡Finalizaste! Aciertos: %1$d | Agua: %2$d</string>
    <string name="menu">Menu</string>
    <string name="btn_reiniciarJuego">Reiniciar Juego</string>

    <string name="ir_inicio">Ir a Inicio</string>
    <string name="ir_ayuda">Ir a Ayuda</string>

    <string name="tit_ayuda">AYUDA</string>
    <string name="textoAyuda">Batalla Naval es un juego por turnos donde el jugador debe encontrar y hundir barcos escondidos en un tablero. Cada turno consiste en seleccionar una celda. Si acierta, se marca como “tocado”; si no, como “agua”. El objetivo es hundir todos los barcos en la menor cantidad de intentos posibles.</string>
    <string name="volver">VOLVER</string>

    <string name="mensaje_entro_ranking">🎉 ¡%1$s entró al ranking con %2$d puntos!</string>
    <string name="mensaje_no_entro_ranking">%1$s ganó con %2$d puntos, pero no entró al top 5.</string>
    <string name="no_jugadores_ranking">No hay jugadores disponibles</string>
    <string name="no_ranking_disponible">No hay ranking disponible</string>
    <string name="ver_ranking">Ver Ranking</string>
    <string name="volver_inicio">Volver al inicio</string>

    <string name="puntos">puntos</string>
    <string name="btn_volverInicio">VOLVER A INICIO</string>
    <string name="dialog_titulo">🚢 ¡Partida ganada!</string>

    <string name="dialog_tiempo_agotado_title">⏳ Tiempo agotado</string>
    <string name="dialog_tiempo_agotado_message">¡Has perdido la partida!</string>
    <string name="jugar_nuevamente">Jugar nuevamente</string>

    <string name="compartir_puntaje">Compartir puntaje</string>
    <string name="mensaje_compartir">🚢 ¡%1$s logró %2$d puntos en Mini Batalla Naval! ¿Podés superarlo?</string>
    <string name="titulo_elegir_compartir">Compartir puntaje con...</string>

</resources>