<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/placeholder_inicio"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_spinner"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_tablero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:entries="@array/opciones_tablero" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ingresarJuego"/>

    <TextView
        android:id="@+id/ayuda_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enlace_ayuda"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="normal"
        android:textSize="16sp"
        android:autoLink="none"
        android:clickable="true"
        android:focusable="true"
        android:padding="0dp" />


</LinearLayout>